--- a/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_chat.xml
@@ -170,7 +170,7 @@
                 android:padding="@dimen/padding_8"
                 android:privateImeOptions=""
                 android:textColor="?chatEditTextColorRef"
-                android:textColorHint="?colorPrimarySemiLight"
+                android:textColorHint="?chatEditTextHintColor"
                 android:textSize="@dimen/font_size_16" />
 
         </RelativeLayout>
