--- a/SportsSideKick/app/src/brugge/res/values/colors.xml
+++ b/SportsSideKick/app/src/brugge/res/values/colors.xml
@@ -31,7 +31,7 @@
     <color name="black_transparent_154"                   >#9a000000</color>
     <color name="colorGray"                                 >#9ba1a3</color>
     <color name="login_background"                          >#e5e5e5</color>
-    <color name="chat_content_right_color"                  >#e6f7f4</color>
+    <color name="chat_content_right_color"                  >#454644</color>
     <color name="colorGraySemiLight"                        >#d3d4d8</color>
     <color name="colorGrayLight"                            >#e9eaee</color>
     <color name="colorGrayDark"                            >#454644</color>
