--- a/SportsSideKick/app/src/main/res/layout-large/dialog_layout.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/dialog_layout.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="@dimen/margin_20"
         android:layout_marginBottom="@dimen/margin_20"
         android:gravity="center_horizontal"
-        android:textColor="@color/white" />
+        android:textColor="?alertDialogTextColor" />
 
 
     <!-- BOTTOM BUTTONS CONTAINER -->
@@ -52,7 +52,7 @@
             android:background="@null"
             android:scaleType="centerInside"
             android:src="?popupCancelButtonIcon"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
         <View
             android:id="@+id/dialog_button_divider"
