--- a/SportsSideKick/app/src/main/res/layout-large/friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/friend_item.xml
@@ -27,7 +27,7 @@
         android:maxLines="2"
         android:lines="2"
         android:ellipsize="end"
-        android:textColor="@color/white"
+        android:textColor="?friendItemTextColor"
         android:textSize="@dimen/font_size_14"
         android:textStyle="bold"
         android:layout_below="@id/avatar"
