--- a/SportsSideKick/app/src/main/res/layout-large/popup_member_info.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_member_info.xml
@@ -148,7 +148,8 @@
         android:layout_marginEnd="@dimen/margin_20"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/middle_split_line"
-        android:src="@drawable/friend_chat_button" />
+        android:src="@drawable/friend_chat_button"
+        android:tint="?memberInfoElementsTint"/>
 
     <TextView
         android:id="@+id/chat_button_text"
@@ -158,7 +159,7 @@
         android:layout_alignBottom="@+id/chat_button_image"
         android:gravity="center_vertical"
         android:text="@string/chat_caption"
-        android:textColor="@color/white"
+        android:textColor="?memberInfoElementsTint"
         android:layout_toEndOf="@+id/chat_button_image" />
 
     <ImageView
@@ -167,6 +168,7 @@
         android:layout_height="@dimen/height_48"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/margin_15"
+        android:tint="?memberInfoElementsTint"
         android:layout_marginEnd="@dimen/margin_20"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/middle_split_line" />
@@ -177,8 +179,8 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/follow_button_image"
         android:layout_alignBottom="@+id/follow_button_image"
+        android:textColor="?memberInfoElementsTint"
         android:gravity="center_vertical"
-        android:textColor="@color/white"
         android:layout_toEndOf="@+id/follow_button_image" />
 
     <ImageView
@@ -188,6 +190,7 @@
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/margin_15"
         android:layout_marginEnd="@dimen/margin_20"
+        android:tint="?memberInfoElementsTint"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/middle_split_line"
         android:layout_below="@+id/follow_button_image" />
@@ -198,8 +201,8 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/friend_button_image"
         android:layout_alignBottom="@+id/friend_button_image"
+        android:textColor="?memberInfoElementsTint"
         android:gravity="center_vertical"
-        android:textColor="@color/white"
         android:layout_toEndOf="@+id/friend_button_image" />
 
     <!-- BOTTOM BUTTONS CONTAINER -->
