--- a/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
+++ b/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
@@ -57,7 +57,7 @@
                 android:background="@null"
                 android:scaleType="centerInside"
                 android:src="?popupCancelButtonIcon"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <View
                 android:id="@+id/dialog_button_divider"
