--- a/SportsSideKick/app/src/main/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item_user.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/demo_content"
-            android:textColor="@color/white"
+            android:textColor="?messageUserTextColor"
             android:textSize="@dimen/font_size_11" />
 
         <ImageView
