--- a/SportsSideKick/app/src/brugge/res/values/club.xml
+++ b/SportsSideKick/app/src/brugge/res/values/club.xml
@@ -7,7 +7,7 @@
     <string name="quiz_url" translatable="false">https://s3-eu-west-1.amazonaws.com/sskirbucket/graphics/quiz.png</string>
     <string name="terms_and_privacy_url" translatable="false">http://sportssidekick.tv/terms?lang=</string>
 
-    <string name="store_url" translatable="false">https://lojaverde.sporting.pt/en</string>
+    <string name="store_url" translatable="false">https://www.clubshop.be/</string>
     <!-- Following urls are to distinguish different sections of store website and show UI on pages where there are products -->
     <string name="store_url_item" translatable="false">https://lojaverde.sporting.pt/en/equipments</string>
     <string name="store_url_item2" translatable="false">https://lojaverde.sporting.pt/en/lifestyle</string>
