--- a/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
@@ -27,8 +27,14 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/side_menu_recycler"
             android:layout_below="@+id/left_top_bar_container"
-            android:background="@color/colorPrimaryMediumLight" />
+            android:background="@color/colorPrimaryMediumLight" >
 
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="base_line_spliter" />
+        </RelativeLayout>
 
         <!-- TICKER -->
         <RelativeLayout
@@ -40,7 +46,6 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:alpha="0.7"
                 android:background="@drawable/phone_background"
                 android:tileMode="repeat" />
 
@@ -61,7 +66,7 @@
                 android:layout_toEndOf="@+id/logo"
                 android:layout_toStartOf="@+id/notification_open"
                 android:textAllCaps="true"
-                android:textColor="@color/white"
+                android:textColor="?phoneLoungeTeamCaptionColor"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
@@ -76,7 +81,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:paddingBottom="@dimen/half_margin"
-                android:textColor="@color/colorAccentSemiDark"
+                android:textColor="?phoneLoungeTickerColor"
                 android:textSize="@dimen/font_size_10" />
 
             <ImageView
@@ -88,7 +93,8 @@
                 android:contentDescription="@string/demo"
                 android:padding="@dimen/half_margin"
                 android:scaleType="fitCenter"
-                android:src="@drawable/notif_icon" />
+                android:src="@drawable/notif_icon"
+                android:tint="?phoneLoungeIconsColor"/>
 
             <ImageView
                 android:id="@+id/friends_open"
@@ -99,7 +105,8 @@
                 android:contentDescription="@string/demo"
                 android:padding="@dimen/half_margin"
                 android:scaleType="fitCenter"
-                android:src="@drawable/icon_friends" />
+                android:src="@drawable/icon_friends"
+                android:tint="?phoneLoungeIconsColor"/>
 
             <TextView
                 android:id="@+id/notification_number"
@@ -123,11 +130,9 @@
         <base.app.util.ui.NoScrollRecycler
             android:id="@+id/side_menu_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentBottom="true"
-            android:background="@color/white"
-            app:layout_heightPercent="6.5%">
-
+            android:background="@color/white">
         </base.app.util.ui.NoScrollRecycler>
 
         <RelativeLayout
@@ -163,7 +168,9 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:background="@color/transparent" />
+
         <include android:id="@+id/splash" layout="@layout/activity_splash"/>
+
         <LinearLayout
             android:id="@+id/fragment_radio_container"
             android:layout_width="match_parent"
@@ -186,6 +193,7 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/fragment_tv_container"
             android:layout_width="match_parent"
@@ -199,9 +207,7 @@
                 android:id="@+id/youtube_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:background="@android:color/transparent" />
-
 
             <RelativeLayout
                 android:id="@+id/play_list_holder"
@@ -210,13 +216,9 @@
                 android:background="@android:color/transparent" />
         </LinearLayout>
 
-
-
-
     </android.support.percent.PercentRelativeLayout>
 
     <android.support.percent.PercentRelativeLayout
-
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="end"
@@ -241,7 +243,6 @@
                 app:layout_heightPercent="14.5%">
 
                 <TextView
-
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -391,8 +392,6 @@
                             android:textStyle="bold" />
 
                     </android.support.percent.PercentRelativeLayout>
-
-
                 </RelativeLayout>
 
             </android.support.percent.PercentRelativeLayout>
