Refactoring Rumours and News fragments to better support Phone and Tablet whitelabeling.

--- a/SportsSideKick/app/src/brugge/res/values/styles.xml
+++ b/SportsSideKick/app/src/brugge/res/values/styles.xml
@@ -182,7 +182,11 @@
         <item name="phoneLoungeTickerColor">@color/black</item>
         <item name="phoneLoungeIconsColor">@color/colorPrimary</item>
         <item name="phoneLoungeIconsColorSelected">@color/black</item>
+        <item name="nextMatchTextPhoneColor">@color/white</item>
+        <item name="createPostPhoneButtonColor">@color/black</item>
 
+        <item name="wallRecyclerListPhoneTopMargin">@dimen/margin_10</item>
+        <item name="newsRecyclerListPhoneTopMargin">@dimen/margin_10</item>
     </style>
 
 
