--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -6,6 +6,14 @@
     android:background="@color/colorPrimaryMediumLight"
     tools:context="base.app.fragment.instance.WallFragment">
 
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/progress_bar"
+        android:layout_width="@dimen/prodgres_bar"
+        android:layout_height="@dimen/prodgres_bar"
+        android:layout_centerInParent="true"
+        android:elevation="@dimen/elevation_2"
+        app:indicatorName="LineSpinFadeLoaderIndicator" />
+
     <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
@@ -23,47 +31,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <RelativeLayout
-                    android:id="@+id/news_image_container"
+                <ImageView
+                    android:id="@+id/top_image"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:src="@drawable/image_news_background"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter" />
 
-                    <ImageView
-                        android:id="@+id/news_top_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:background="@drawable/image_news_background"
-                        android:scaleType="centerCrop" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:gravity="center"
-                        android:text="@string/news"
-                        android:textAlignment="center"
-                        android:textColor="@color/white"
-                        android:textSize="40sp"
-                        android:textStyle="bold" />
-
-                </RelativeLayout>
-
-                <com.wang.avi.AVLoadingIndicatorView
-                    android:id="@+id/progress_bar"
-                    android:layout_width="@dimen/prodgres_bar"
-                    android:layout_height="@dimen/prodgres_bar"
-                    android:layout_below="@id/news_image_container"
-                    android:layout_centerInParent="true"
-                    android:elevation="@dimen/elevation_2"
-                    app:indicatorName="LineSpinFadeLoaderIndicator" />
+                <TextView
+                    android:id="@+id/top_caption"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignBottom="@+id/top_image"
+                    android:gravity="center"
+                    android:text="@string/news"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textAllCaps="true"
+                    android:textSize="@dimen/font_size_36"
+                    android:shadowColor="@color/black_transparent_154"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+                    android:shadowRadius="2"
+                    style="@style/semiBoldText"
+                />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/news_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_below="@id/news_image_container"
-                    android:layout_marginTop="@dimen/margin_negative_30" />
+                    android:layout_below="@id/top_image"
+                    android:layout_marginTop="?newsRecyclerListPhoneTopMargin"
+                    />
 
             </RelativeLayout>
         </android.support.v4.widget.NestedScrollView>
