--- a/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
@@ -35,7 +35,7 @@
             android:gravity="center"
             android:padding="@dimen/padding_8"
             android:text="@string/chat_caption"
-            android:textColor="@color/white" />
+            android:textColor="?chatPopupsCaptionColor" />
 
     </RelativeLayout>
 
@@ -90,15 +90,15 @@
                 android:orientation="horizontal">
 
                 <TextView
-
+                    android:id="@+id/textView3"
                     android:layout_width="@dimen/space_0"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/margin_1"
                     android:layout_weight="1"
-                    android:background="@color/colorPrimaryMediumLight"
+                    android:background="?chatSlideButtonBackgroundPhoneColorRef"
                     android:gravity="center"
                     android:text="@string/create_chat"
-                    android:textColor="?white" />
+                    android:textColor="?chatSlideButtonTextPhoneColorRef" />
 
                 <TextView
                     android:id="@+id/join_a_chat"
@@ -106,25 +106,11 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/margin_1"
                     android:layout_weight="1"
-                    android:background="@color/colorPrimary"
+                    android:background="?chatSlideSecondButtonBackgroundPhoneColorRef"
                     android:gravity="center"
                     android:text="@string/join_chat"
-                    android:textColor="?white_semitransparent" />
-
-                <TextView
-                    android:id="@+id/requests_chat"
-                    android:layout_width="@dimen/space_0"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:visibility="gone"
-                    android:background="@color/colorPrimary"
-                    android:gravity="center"
-                    android:text="@string/request"
-                    android:textColor="?white_semitransparent" />
+                    android:textColor="?chatSlideSecondButtonTextPhoneColorRef" />
             </LinearLayout>
-
-
-
         </RelativeLayout>
         <View
             android:id="@+id/top_split_line"
@@ -209,7 +195,7 @@
         android:layout_below="@+id/chat_top_buttons_container"
         android:gravity="center"
         android:text="@string/manage_public_chat_caption"
-        android:textColor="@color/white" />
+        android:textColor="?chatDescriptionTextPhoneColorRef" />
 
     <RelativeLayout
         android:id="@+id/chat_search_friends_container"
@@ -242,7 +228,7 @@
             android:layout_toEndOf="@+id/private_chat_switch"
             android:gravity="center_vertical"
             android:text="@string/this_chat_is_public_phone"
-            android:textColor="@color/white" />
+            android:textColor="?chatPrivateTextColorPhoneRef" />
 
         <EditText
             android:id="@+id/search_edit_text"
@@ -310,7 +296,7 @@
         android:scaleType="centerInside"
         android:text="@string/create_chat"
         android:textAllCaps="false"
-        android:textColor="@color/colorPrimary" />
+        android:textColor="?chatCreateButtonTextPhoneColorRef" />
 
     <base.app.util.ui.AutofitRecyclerView
         android:id="@+id/friends_recycler_view"
