--- a/SportsSideKick/app/src/brugge/res/values/styles.xml
+++ b/SportsSideKick/app/src/brugge/res/values/styles.xml
@@ -167,8 +167,8 @@
         <item name="chatSlideSecondButtonBackgroundColorRef">@color/colorPrimaryMediumLight</item>
         <item name="chatSlideSecondButtonTextColorRef">@color/black</item>
 
-        <item name="chatJoinSearchBackgroundColorRef">@color/colorGrayLight</item>
-        <item name="chatJoinSearchTextColorRef">@color/colorGrayDark</item>
+        <item name="chatJoinSearchBackgroundColorRef">@color/colorGrayDark</item>
+        <item name="chatJoinSearchTextColorRef">@color/black</item>
 
         <item name="chatJoinBackgroundColorRef">@color/white</item>
         <item name="chatJoinChatsHeadlineColorRef">@color/colorPrimary</item>
