--- a/SportsSideKick/app/src/main/res/layout-large/popup_join_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_join_chat.xml
@@ -45,7 +45,7 @@
                 android:gravity="center"
                 android:padding="@dimen/padding_8"
                 android:text="@string/chat_caption"
-                android:textColor="@color/white" />
+                android:textColor="?chatPopupsCaptionColor" />
 
         </RelativeLayout>
 
@@ -122,14 +122,14 @@
                 android:layout_height="@dimen/height_60"
                 android:layout_below="@+id/top_vertical_spliter"
                 android:layout_toStartOf="@+id/chat_join_search_button"
-                android:background="?chatJoinSearchBackgroundColorRef"
+                android:background="@color/colorPrimaryMediumDark"
                 android:gravity="start|center_vertical"
                 android:hint="@string/search_public_chats"
                 android:imeOptions="flagNoExtractUi"
                 android:maxLines="1"
                 android:padding="@dimen/margin_20"
                 android:textColor="?chatJoinSearchTextColorRef"
-                android:textColorHint="?white_semitransparent"
+                android:textColorHint="?white"
                 android:textSize="@dimen/font_size_14" />
 
             <ImageButton
@@ -143,6 +143,7 @@
 
 
             <base.app.util.ui.AutofitRecyclerView
+                android:background="@color/colorPrimaryMediumLight"
                 android:id="@+id/friends_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
