--- a/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
@@ -43,8 +43,9 @@
         android:id="@+id/chat_top_buttons_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/chat_headline_container"
-        android:clickable="true">
+        android:clickable="true"
+        android:layout_below="@+id/chat_headline_container"
+        android:layout_alignParentStart="true">
 
         <RelativeLayout
             android:id="@+id/top_container"
