--- a/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_join_chat.xml
@@ -32,7 +32,7 @@
             android:gravity="center"
             android:padding="@dimen/padding_8"
             android:text="@string/chat_caption"
-            android:textColor="@color/white" />
+            android:textColor="?chatPopupsCaptionColor" />
 
     </RelativeLayout>
 
@@ -77,13 +77,6 @@
                     android:layout_marginEnd="@dimen/margin_1"
                     android:layout_weight="1"
                     android:background="?colorAccent" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/height_2"
-                    android:visibility="gone"
-                    android:layout_weight="1"
-                    android:background="@color/colorPrimaryVeryLight" />
             </LinearLayout>
             <!-- TOP BUTTONS CONTAINER -->
             <LinearLayout
@@ -101,10 +94,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/margin_1"
                     android:layout_weight="1"
-                    android:background="@color/colorPrimary"
+                    android:background="?chatSlideSecondButtonBackgroundColorRef"
                     android:gravity="center"
                     android:text="@string/create_chat"
-                    android:textColor="?white_semitransparent" />
+                    android:textColor="?chatSlideSecondButtonTextColorRef" />
 
                 <TextView
                     android:id="@+id/join_a_chat"
@@ -112,21 +105,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/margin_1"
                     android:layout_weight="1"
-                    android:background="@color/colorPrimaryMediumLight"
+                    android:background="?chatSlideButtonBackgroundColorRef"
                     android:gravity="center"
                     android:text="@string/join_chat"
-                    android:textColor="?white" />
-
-                <TextView
-                    android:id="@+id/requests_chat"
-                    android:layout_width="@dimen/space_0"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/colorPrimary"
-                    android:gravity="center"
-                    android:visibility="gone"
-                    android:text="@string/request"
-                    android:textColor="?white_semitransparent" />
+                    android:textColor="?chatSlideButtonTextColorRef" />
             </LinearLayout>
 
 
@@ -162,7 +144,7 @@
             android:imeOptions="flagNoExtractUi"
             android:maxLines="1"
             android:padding="@dimen/margin_14"
-            android:textColor="@color/white"
+            android:textColor="?chatJoinSearchTextColorRef"
             android:textColorHint="?white"
             android:textSize="@dimen/font_size_14" />
 
@@ -203,7 +185,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary">
+        android:background="?chatJoinBackgroundColorRef">
 
         <TextView
             android:id="@+id/bottom_public_chats_headline"
@@ -214,7 +196,7 @@
             android:gravity="center"
             android:padding="@dimen/padding_8"
             android:text="@string/public_chats_your_friends_are_in"
-            android:textColor="@color/white" />
+            android:textColor="?chatJoinChatsHeadlineColorRef" />
 
         <RelativeLayout
             android:id="@+id/bottom_public_chats_recycler_container"
